--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,14 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.efsavage.twitter.bootstrap</groupId>
+            <artifactId>bootstrap-maven</artifactId>
+            <version>2.3.1</version>
+            <scope>provided</scope>
+        </dependency>
+
+
     </dependencies>
 
 </project>
