--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,30 @@
     <display-name>Catharina</display-name>
 
     <welcome-file-list>
-        <welcome-file>index.html</welcome-file>
+        <welcome-file>reg.jsp</welcome-file>
     </welcome-file-list>
+
+    <servlet>
+        <servlet-name>Register</servlet-name>
+        <servlet-class>com.epam.catharina.servlet.Register</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>Register</servlet-name>
+        <url-pattern>/register</url-pattern>
+    </servlet-mapping>
+
+
+
+    <filter>
+        <filter-name>HeadFilter</filter-name>
+        <filter-class>com.epam.catharina.servlet.HeaderFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>HeadFilter</filter-name>
+        <url-pattern>*</url-pattern>
+    </filter-mapping>
+
 
 </web-app>
