--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
     <display-name>Catharina</display-name>
 
     <welcome-file-list>
-        <welcome-file>index.html</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
 
     <servlet>
@@ -22,7 +22,6 @@
     </servlet-mapping>
 
 
-
     <filter>
         <filter-name>HeadFilter</filter-name>
         <filter-class>com.epam.retobay.servlet.HeaderFilter</filter-class>
@@ -30,8 +29,9 @@
 
     <filter-mapping>
         <filter-name>HeadFilter</filter-name>
-        <url-pattern>*</url-pattern>
+        <url-pattern>/*</url-pattern>
     </filter-mapping>
+
 
 
 </web-app>
